deploy: 6e19cd2714a698144c750de28069cabb190f6372

--- a/l-age-d-or-du-metroidvania/index.html
+++ b/l-age-d-or-du-metroidvania/index.html
@@ -72,7 +72,7 @@
     <iframe src="https://www.youtube-nocookie.com/embed/UQ0gMrQLDRg" title="Youtube" class="yvi" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 </div>
 <blockquote>
-<p>Alors qu'ils étaient assez rares il y a encore une quinzaine d'années, les Metroidvania sont désormais partout. Chez les indés comme chez les grosses structures de l'industrie. Pourquoi cette formule est-elle devenue aussi populaire ? Comment a-t-elle évolué ? Peut-elle encore le faire ? Tentative de réponse dans ce nouveau GND.</p>
+<p>Alors qu'ils étaient assez rares il y avait encore une quinzaine d'années, les Metroidvania sont désormais partout. Chez les indés comme chez les grosses structures de l'industrie. Pourquoi cette formule est-elle devenue aussi populaire ? Comment a-t-elle évolué ? Peut-elle encore le faire ? Tentative de réponse dans ce nouveau GND.</p>
 </blockquote>
 <p>Jeux mentionnés:</p>
 <ul>
