deploy: d73c0395382fe6fd934bf83cca4ec96ce3cc53fa

--- a/index.html
+++ b/index.html
@@ -141,6 +141,9 @@
           <a href="https://yayaps.github.io/zola_example/pokemon-noir-et-blanc/">Pokémon Noir et Blanc</a>
         </div>
         <div class="tpad">
+          <a href="https://yayaps.github.io/zola_example/test/">Exo 1</a>
+        </div>
+        <div class="tpad">
           <a href="https://yayaps.github.io/zola_example/the-legend-of-zelda/">The Legend of Zelda: Tears of the Kingdom</a>
         </div>
         <div class="tpad">
