--- a/pokemon-noir-et-blanc/index.html
+++ b/pokemon-noir-et-blanc/index.html
@@ -76,7 +76,7 @@
           <a href="https://yayaps.github.io/zola_example/pokemon-noir-2-et-blanc-2/">&#8249; Pokémon Noir 2 et Blanc 2</a>
         </div>
         <div>
-          <a href="https://yayaps.github.io/zola_example/the-legend-of-zelda/"> The Legend of Zelda: Tears of the Kingdom &#8250;</a>
+          <a href="https://yayaps.github.io/zola_example/test/"> Exo 1 &#8250;</a>
         </div>
       </nav>
     </article>
