--- a/the-legend-of-zelda/index.html
+++ b/the-legend-of-zelda/index.html
@@ -73,7 +73,7 @@
 
       <nav>
         <div>
-          <a href="https://yayaps.github.io/zola_example/pokemon-noir-et-blanc/">&#8249; Pokémon Noir et Blanc</a>
+          <a href="https://yayaps.github.io/zola_example/test/">&#8249; Exo 1</a>
         </div>
         <div>
           <a href="https://yayaps.github.io/zola_example/le-backseat-des-jeux-modernes/"> Le BACKSEAT des jeux modernes &#8250;</a>
