deploy: 8455bd0481e2057af611348505bff19395865ba4

--- a/test/index.html
+++ b/test/index.html
@@ -62,7 +62,7 @@
     <article>
       <h1><a href="https://yayaps.github.io/zola_example/test/">Exo 1</a></h1>
 
-      <span class="s95"> May 27, 2023 <span class="rpad"></span> #<a href="https://yayaps.github.io/zola_example/tags/la-fin-du-game/">La fin du game</a> </span>
+      <span class="s95"> May 27, 2023 <span class="rpad"></span></span>
 
     
 
