deploy: 5887247becb4140d3601dc78d2cf7fcd647b0c9d

--- a/game-design/index.html
+++ b/game-design/index.html
@@ -121,7 +121,7 @@
           <a href="https://yayaps.github.io/zola_example/l-age-d-or-du-metroidvania/">&#8249; L&#x27;âge d&#x27;or du Metroidvania</a>
         </div>
         <div>
-          <a href="https://yayaps.github.io/zola_example/majora-s-mask/"> Majora&#x27;s Mask &#8250;</a>
+          <a href="https://yayaps.github.io/zola_example/test2/"> JDR &#8250;</a>
         </div>
       </nav>
     </article>
