--- a/index.html
+++ b/index.html
@@ -85,6 +85,19 @@
         <span class="s90"> September 13, 2024 <span class="rpad"></span> #<a href="https://yayaps.github.io/zola_example/tags/wikipedia/">Wikipedia</a> </span>
       </article>
       <article>
+        <big><span class="s85"><a href="https://yayaps.github.io/zola_example/test2/">JDR</a></span></big>
+        <div class="sum">
+        <p>
+          #Introduction
+Le jeu de rôle sur table (de l'anglais tabletop role-playing game) ou jeu de rôle papier (d'après pen-and-paper role-playing game), simp…
+          <a href="https://yayaps.github.io/zola_example/test2/">
+            ...more
+          </a>
+        </div>
+
+        <span class="s90"> May 27, 2024 <span class="rpad"></span></span>
+      </article>
+      <article>
         <big><span class="s85"><a href="https://yayaps.github.io/zola_example/majora-s-mask/">Majora&#x27;s Mask</a></span></big>
         <div class="sum">
         <p>
@@ -107,20 +120,8 @@
         </div>
 
         <span class="s90"> May 27, 2023 <span class="rpad"></span> #<a href="https://yayaps.github.io/zola_example/tags/esquive-la-boule-de-feu/">Esquive la Boule de Feu</a> </span>
-      </article>
-      <article>
-        <big><span class="s85"><a href="https://yayaps.github.io/zola_example/pokemon-noir-et-blanc/">Pokémon Noir et Blanc</a></span></big>
-        <div class="sum">
-        <p>
-          Pokémon version noire (ポケットモンスター　ブラック, Poketto Monsutā Burakku?) et Pokémon version blanche (ポケットモンスター　ホワイト, Poketto Monsutā Howaito?), couramment appelés Pokémon Noir et Pokémon Blanc, sont deux éditions du jeu vidéo de rôle de la série Pokémon développé par Game Freak. Elles sont éditées par The Pokémon Company et Nintendo sur la console portable Nintendo DS au Japon en 2010, en Europe et en Amérique du Nord en 2011
-          <a href="https://yayaps.github.io/zola_example/pokemon-noir-et-blanc/">
-            ...more
-          </a>
-        </div>
-
-        <span class="s90"> May 27, 2023 <span class="rpad"></span> #<a href="https://yayaps.github.io/zola_example/tags/esquive-la-boule-de-feu/">Esquive la Boule de Feu</a> </span>
       </article>  
-      <nav class="vpad"><a class="inp on cnav" href="#">1</a><a class="inp on" href="https://yayaps.github.io/zola_example/page/2/">2</a></nav>
+      <nav class="vpad"><a class="inp on cnav" href="#">1</a><a class="inp on" href="https://yayaps.github.io/zola_example/page/2/">2</a><a class="inp on" href="https://yayaps.github.io/zola_example/page/3/">3</a></nav>
     </div>
     <div class="sblock">
       <div class="blockdiv sticky">
@@ -130,6 +131,9 @@
         </div>
         <div class="tpad">
           <a href="https://yayaps.github.io/zola_example/game-design/">Game design</a>
+        </div>
+        <div class="tpad">
+          <a href="https://yayaps.github.io/zola_example/test2/">JDR</a>
         </div>
         <div class="tpad">
           <a href="https://yayaps.github.io/zola_example/majora-s-mask/">Majora&#x27;s Mask</a>
