--- a/test2/index.html
+++ b/test2/index.html
@@ -24,11 +24,11 @@
   <meta name="robots" content="index, follow" />
   <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
   <meta name="bingbot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
-  <title>Majora's Mask | Game Design</title>
+  <title>JDR | Game Design</title>
   <meta name="author" content="Various" />
   <meta name="copyright" content="Game Design" />
-  <meta name="description" content="The Legend of Zelda: Majora&#x27;s Mask (ou simplement Majora&#x27;s Mask) est un jeu d&#x27;action-aventure développé par Nintendo EAD et édité par Nintendo en 2000 sur la console Nintendo 64. Sixième jeu paru dans la franchise The Legend of Zelda et second en trois dimensions après Ocarina of Time, il est conçu en à peine plus d&#x27;un an par une équipe dirigée par Eiji Aonuma et Yoshiaki Koizumi et produit par Shigeru Miyamoto." />
-  <link rel="canonical" href="https://yayaps.github.io/zola_example/majora-s-mask/" />
+  <meta name="description" content="Quelques pages à propos du game design." />
+  <link rel="canonical" href="https://yayaps.github.io/zola_example/test2/" />
   <meta name="keywords" content="Game design, Youtube" />
   <script defer src="https://yayaps.github.io/zola_example/js/abridge.min.js?h=e0f9a881a665c86cce9c" integrity="sha384-QF67y7RnPkuDrJNQqn3/7nYxqxWkW/qHI7zN0WTES1aXbf+TotoByRBb835fUE6U"></script>
   <noscript><link rel="stylesheet" href="https://yayaps.github.io/zola_example/nojs.css" /></noscript>
@@ -60,51 +60,39 @@
   </header>
   <main>
     <article>
-      <h1><a href="https://yayaps.github.io/zola_example/majora-s-mask/">Majora&#x27;s Mask</a></h1>
+      <h1><a href="https://yayaps.github.io/zola_example/test2/">JDR</a></h1>
 
-      <span class="s95"> May 27, 2023 <span class="rpad"></span> #<a href="https://yayaps.github.io/zola_example/tags/esquive-la-boule-de-feu/">Esquive la Boule de Feu</a>  #<a href="https://yayaps.github.io/zola_example/tags/la-fin-du-game/">La fin du game</a> </span>
+      <span class="s95"> May 27, 2024 <span class="rpad"></span></span>
 
     
 
 
-<h2 id="esquive-la-boule-de-feu">Esquive la boule de feu</h2>
-<div class="yv">
-    <iframe src="https://www.youtube-nocookie.com/embed/rYKxO21WVcE" title="Youtube" class="yvi" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-</div>
-<h2 id="fin-du-game">Fin du game</h2>
-<div class="yv">
-    <iframe src="https://www.youtube-nocookie.com/embed/FTS0i-K9qTc" title="Youtube" class="yvi" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-</div>
-<h2 id="autre-liens">Autre liens</h2>
-<ul>
-<li><a rel="noopener" target="_blank" href="https://en.wikipedia.org/wiki/The_Legend_of_Zelda%3A_Majora&#x27;s_Mask">Wikipedia</a></li>
-<li><a rel="noopener" target="_blank" href="https://www.metacritic.com/game/the-legend-of-zelda-majoras-mask/">Metacritrics</a></li>
-</ul>
+<p>#Introduction</p>
+<p>Le jeu de rôle sur table (de l'anglais tabletop role-playing game) ou jeu de rôle papier (d'après pen-and-paper role-playing game), simplement appelé jeu de rôle ou JDR par ses pratiquants, est un jeu de société dans lequel les participants conçoivent ensemble une fiction par l’interprétation de rôles et par la narration, dans le cadre de contraintes de jeu qu’ils s’imposent.</p>
+<p>Les joueurs de jeu de rôle sont appelés « rôlistes1 ».</p>
+<p>Dans sa forme traditionnelle, ce jeu rassemble les joueurs durant la partie autour d'une table, avec communément pour accessoires des dés et feuilles de papier. Il rassemble aussi des joueurs pour des parties sur Internet, et a inspiré d'autres formes de jeux de rôle ludiques tels que le grandeur nature et certains jeux vidéo.</p>
+<p>#Classement de jeux populaires</p>
+<hr />
+<table><thead><tr><th>Génial</th><th>Bon</th><th>Mauvais</th></tr></thead><tbody>
+<tr><td>Maléfices</td><td>Kids in bikes<sup class="footnote-reference" id="fr-1-1"><a href="#fn-1">[1]</a></sup></td><td>Dungeons and dragons</td></tr>
+<tr><td>Pathfinder</td><td>Donjon crawler</td><td>Star trek</td></tr>
+</tbody></table>
+<hr />
+<hr><ol class="footnotes-list">
+<li id="fn-1">
+<p><a href="/https://www.huntersentertainment.com/kidsonbikesrpg">Kids on bikes</a> <a href="#fr-1-1">↩</a></p>
+</li>
+</ol>
 
       <nav>
         <div>
-          <a href="https://yayaps.github.io/zola_example/test2/">&#8249; JDR</a>
+          <a href="https://yayaps.github.io/zola_example/game-design/">&#8249; Game design</a>
         </div>
         <div>
-          <a href="https://yayaps.github.io/zola_example/pokemon-noir-2-et-blanc-2/"> Pokémon Noir 2 et Blanc 2 &#8250;</a>
+          <a href="https://yayaps.github.io/zola_example/majora-s-mask/"> Majora&#x27;s Mask &#8250;</a>
         </div>
       </nav>
     </article>
-
-    <div class="sblock">
-      <div class="blockdiv sticky">
-        <a class="b s150" href="#">Index</a>
-        <div>
-          <a href="#esquive-la-boule-de-feu">Esquive la boule de feu</a>
-        </div>
-        <div>
-          <a href="#fin-du-game">Fin du game</a>
-        </div>
-        <div>
-          <a href="#autre-liens">Autre liens</a>
-        </div>
-      </div>
-    </div>
   </main>
   <footer>
     <hr />
