deploy: d71bfcba3b445e9b3b3fa24f77a3aef914f1c948

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
         <big><span class="s85"><a href="https://yayaps.github.io/zola_example/test2/">JDR</a></span></big>
         <div class="sum">
         <p>
-          #Introduction
-Le jeu de rôle sur table (de l'anglais tabletop role-playing game) ou jeu de rôle papier (d'après pen-and-paper role-playing game), simp…
+          Introduction
+Le jeu de rôle sur table (de l'anglais tabletop role-playing game) ou jeu de rôle papier (d'après pen-and-paper role-playing game), simpl…
           <a href="https://yayaps.github.io/zola_example/test2/">
             ...more
           </a>
