--- a/test2/index.html
+++ b/test2/index.html
@@ -67,11 +67,11 @@
     
 
 
-<p>#Introduction</p>
+<h1 id="introduction">Introduction</h1>
 <p>Le jeu de rôle sur table (de l'anglais tabletop role-playing game) ou jeu de rôle papier (d'après pen-and-paper role-playing game), simplement appelé jeu de rôle ou JDR par ses pratiquants, est un jeu de société dans lequel les participants conçoivent ensemble une fiction par l’interprétation de rôles et par la narration, dans le cadre de contraintes de jeu qu’ils s’imposent.</p>
 <p>Les joueurs de jeu de rôle sont appelés « rôlistes1 ».</p>
 <p>Dans sa forme traditionnelle, ce jeu rassemble les joueurs durant la partie autour d'une table, avec communément pour accessoires des dés et feuilles de papier. Il rassemble aussi des joueurs pour des parties sur Internet, et a inspiré d'autres formes de jeux de rôle ludiques tels que le grandeur nature et certains jeux vidéo.</p>
-<p>#Classement de jeux populaires</p>
+<h1 id="classement-de-jeux-populaires">Classement de jeux populaires</h1>
 <hr />
 <table><thead><tr><th>Génial</th><th>Bon</th><th>Mauvais</th></tr></thead><tbody>
 <tr><td>Maléfices</td><td>Kids in bikes<sup class="footnote-reference" id="fr-1-1"><a href="#fn-1">[1]</a></sup></td><td>Dungeons and dragons</td></tr>
